# storage-client-interface

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: lint-and-test.yml  publish-rust-crate.yml
src/: lib.rs  s3.rs
src/mocks/: mod.rs
src/storage/: s3.rs
