[package]
name = "storage-client-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
async-trait = "0.1.56"
aws-sdk-s3 = {version = "0.30.0", optional = true}
aws-config = {version = "0.56.1", optional = true}
mockall = "0.11.4"

[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]