[package]
name = "storage-client-interface"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for exposing the StorageClientInterface trait for interacting with a storage backend. Used by Evervault Cages."
homepage = "https://github.com/evervault/storage-client-interface"
documentation = "https://docs.rs/storage-client-interface"
repository = "https://github.com/evervault/storage-client-interface"
readme = "README.md"
keywords = ["storage", "acme", "s3", "cages", "evervault"]
categories = ["development-tools"]

[dependencies]
thiserror = "1.0.25"
async-trait = "0.1.56"
aws-sdk-s3 = {version = "0.30.0", optional = true}
aws-config = {version = "0.56.1", optional = true}


[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]